message_feed: Fix spacing between poll and todo text fields.

--- a/static/styles/widgets.css
+++ b/static/styles/widgets.css
@@ -111,7 +111,7 @@ button {
     &.poll-option,
     &.poll-question {
         padding: 4px 6px;
-        margin: 2px 0 2px 0;
+        margin: 2px 5px 9px 1px;
     }
 }
 
